crates/emitter-msw/tests/snapshots/snapshots__snapshot_allof_conflict_msw.snap
---
source: crates/emitter-msw/tests/snapshots.rs
expression: emit_msw(yaml)
---
// Generated by oa-forge. Do not edit.

import { http, HttpResponse } from 'msw';
import type * as Types from './types.gen';

export function listEntitiesHandler(override?: Types.listEntitiesResponse | (() => Types.listEntitiesResponse)) {
  return http.get('/entities', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export const handlers = [
  listEntitiesHandler(),
];
