crates/emitter-msw/tests/snapshots/snapshots__snapshot_anyof_plain_msw.snap
---
source: crates/emitter-msw/tests/snapshots.rs
expression: emit_msw(yaml)
---
// Generated by oa-forge. Do not edit.

import { http, HttpResponse } from 'msw';
import type * as Types from './types.gen';

export function searchHandler(override?: Types.searchResponse | (() => Types.searchResponse)) {
  return http.post('/search', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function listNotificationsHandler(override?: Types.listNotificationsResponse | (() => Types.listNotificationsResponse)) {
  return http.get('/notifications', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export const handlers = [
  searchHandler(),
  listNotificationsHandler(),
];
