crates/emitter-msw/tests/snapshots/snapshots__snapshot_edge_cases_msw.snap
---
source: crates/emitter-msw/tests/snapshots.rs
expression: emit_msw(yaml)
---
// Generated by oa-forge. Do not edit.

import { http, HttpResponse } from 'msw';
import type * as Types from './types.gen';

export function Get__no-operation-idHandler(override?: Types.Get__no-operation-idResponse | (() => Types.Get__no-operation-idResponse)) {
  return http.get('/no-operation-id', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function emptyResponsesHandler(override?: undefined | (() => undefined)) {
  return http.post('/empty-responses', () => {
    return new HttpResponse(null, { status: 204 });
  });
}

export function replaceAllVoidHandler(override?: undefined | (() => undefined)) {
  return http.put('/all-void', () => {
    return new HttpResponse(null, { status: 204 });
  });
}

export function deleteAllVoidHandler(override?: undefined | (() => undefined)) {
  return http.delete('/all-void', () => {
    return new HttpResponse(null, { status: 204 });
  });
}

export function noParamSchemaHandler(override?: Types.noParamSchemaResponse | (() => Types.noParamSchemaResponse)) {
  return http.get('/no-param-schema', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function deeplyNestedHandler(override?: Types.deeplyNestedResponse | (() => Types.deeplyNestedResponse)) {
  return http.get('/deeply-nested', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function onlyErrorResponseHandler(override?: undefined | (() => undefined)) {
  return http.get('/only-error-response', () => {
    return new HttpResponse(null, { status: 204 });
  });
}

export function nullableArrayHandler(override?: Types.nullableArrayResponse | (() => Types.nullableArrayResponse)) {
  return http.get('/nullable-array', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function enumOnlyResponseHandler(override?: Types.enumOnlyResponseResponse | (() => Types.enumOnlyResponseResponse)) {
  return http.get('/enum-only-response', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function emptyObjectBodyHandler(override?: Types.emptyObjectBodyResponse | (() => Types.emptyObjectBodyResponse)) {
  return http.post('/empty-object-body', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function textResponseHandler(override?: Types.textResponseResponse | (() => Types.textResponseResponse)) {
  return http.get('/text-response', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.text(data as string ?? '');
  });
}

export function blobResponseHandler(override?: undefined | (() => undefined)) {
  return http.get('/blob-response', () => {
    return new HttpResponse(null, { status: 200 });
  });
}

export function multipleSuccessCodesHandler(override?: Types.multipleSuccessCodesResponse | (() => Types.multipleSuccessCodesResponse)) {
  return http.post('/multiple-success-codes', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export const handlers = [
  Get__no-operation-idHandler(),
  emptyResponsesHandler(),
  replaceAllVoidHandler(),
  deleteAllVoidHandler(),
  noParamSchemaHandler(),
  deeplyNestedHandler(),
  onlyErrorResponseHandler(),
  nullableArrayHandler(),
  enumOnlyResponseHandler(),
  emptyObjectBodyHandler(),
  textResponseHandler(),
  blobResponseHandler(),
  multipleSuccessCodesHandler(),
];
