crates/emitter-msw/tests/snapshots/snapshots__snapshot_error_responses_msw.snap
---
source: crates/emitter-msw/tests/snapshots.rs
expression: emit_msw(yaml)
---
// Generated by oa-forge. Do not edit.

import { http, HttpResponse } from 'msw';
import type * as Types from './types.gen';

export function listUsersHandler(override?: Types.listUsersResponse | (() => Types.listUsersResponse)) {
  return http.get('/users', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function createUserHandler(override?: Types.createUserResponse | (() => Types.createUserResponse)) {
  return http.post('/users', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function getUserHandler(override?: Types.getUserResponse | (() => Types.getUserResponse)) {
  return http.get('/users/:userId', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function deleteUserHandler(override?: undefined | (() => undefined)) {
  return http.delete('/users/:userId', () => {
    return new HttpResponse(null, { status: 204 });
  });
}

export const handlers = [
  listUsersHandler(),
  createUserHandler(),
  getUserHandler(),
  deleteUserHandler(),
];
