crates/emitter-msw/tests/snapshots/snapshots__snapshot_header_cookie_params_msw.snap
---
source: crates/emitter-msw/tests/snapshots.rs
expression: emit_msw(yaml)
---
// Generated by oa-forge. Do not edit.

import { http, HttpResponse } from 'msw';
import type * as Types from './types.gen';

export function listResourcesHandler(override?: Types.listResourcesResponse | (() => Types.listResourcesResponse)) {
  return http.get('/resources', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function getResourceHandler(override?: Types.getResourceResponse | (() => Types.getResourceResponse)) {
  return http.get('/resources/:resourceId', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export const handlers = [
  listResourcesHandler(),
  getResourceHandler(),
];
