crates/emitter-msw/tests/snapshots/snapshots__snapshot_inline_schemas_msw.snap
---
source: crates/emitter-msw/tests/snapshots.rs
expression: emit_msw(yaml)
---
// Generated by oa-forge. Do not edit.

import { http, HttpResponse } from 'msw';
import type * as Types from './types.gen';

export function getStatusHandler(override?: Types.getStatusResponse | (() => Types.getStatusResponse)) {
  return http.get('/status', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function echoHandler(override?: Types.echoResponse | (() => Types.echoResponse)) {
  return http.post('/echo', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function getConfigHandler(override?: Types.getConfigResponse | (() => Types.getConfigResponse)) {
  return http.get('/config', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function getItemHistoryHandler(override?: Types.getItemHistoryResponse | (() => Types.getItemHistoryResponse)) {
  return http.get('/items/:itemId/history', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export const handlers = [
  getStatusHandler(),
  echoHandler(),
  getConfigHandler(),
  getItemHistoryHandler(),
];
