crates/emitter-msw/tests/snapshots/snapshots__snapshot_multipart_paginated_msw.snap
---
source: crates/emitter-msw/tests/snapshots.rs
expression: emit_msw(yaml)
---
// Generated by oa-forge. Do not edit.

import { http, HttpResponse } from 'msw';
import type * as Types from './types.gen';

export function uploadFileHandler(override?: Types.uploadFileResponse | (() => Types.uploadFileResponse)) {
  return http.post('/upload', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function listItemsHandler(override?: Types.listItemsResponse | (() => Types.listItemsResponse)) {
  return http.get('/items', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function listCursoredHandler(override?: Types.listCursoredResponse | (() => Types.listCursoredResponse)) {
  return http.get('/cursored', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function updateTextHandler(override?: undefined | (() => undefined)) {
  return http.put('/text-upload', () => {
    return new HttpResponse(null, { status: 204 });
  });
}

export const handlers = [
  uploadFileHandler(),
  listItemsHandler(),
  listCursoredHandler(),
  updateTextHandler(),
];
