crates/emitter-msw/tests/snapshots/snapshots__snapshot_petstore_msw.snap
---
source: crates/emitter-msw/tests/snapshots.rs
expression: emit_msw(yaml)
---
// Generated by oa-forge. Do not edit.

import { http, HttpResponse } from 'msw';
import type * as Types from './types.gen';

export function listPetsHandler(override?: Types.listPetsResponse | (() => Types.listPetsResponse)) {
  return http.get('/pets', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function createPetHandler(override?: Types.createPetResponse | (() => Types.createPetResponse)) {
  return http.post('/pets', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function getPetHandler(override?: Types.getPetResponse | (() => Types.getPetResponse)) {
  return http.get('/pets/:petId', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function deletePetHandler(override?: undefined | (() => undefined)) {
  return http.delete('/pets/:petId', () => {
    return new HttpResponse(null, { status: 204 });
  });
}

export const handlers = [
  listPetsHandler(),
  createPetHandler(),
  getPetHandler(),
  deletePetHandler(),
];
