crates/emitter-msw/tests/snapshots/snapshots__snapshot_reserved_keywords_msw.snap
---
source: crates/emitter-msw/tests/snapshots.rs
expression: emit_msw(yaml)
---
// Generated by oa-forge. Do not edit.

import { http, HttpResponse } from 'msw';
import type * as Types from './types.gen';

export function listItemsHandler(override?: Types.listItemsResponse | (() => Types.listItemsResponse)) {
  return http.get('/items', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export function createItemHandler(override?: Types.createItemResponse | (() => Types.createItemResponse)) {
  return http.post('/items', () => {
    const data = typeof override === 'function' ? override() : override;
    return HttpResponse.json(data ?? {});
  });
}

export const handlers = [
  listItemsHandler(),
  createItemHandler(),
];
